k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasker-app-deployment
  namespace: default
  labels:
    app: tasker-app
spec:
  selector:
    matchLabels:
      app: tasker-app
  replicas: 1
  template:
    metadata:
      labels:
        app: tasker-app
    spec:
      containers:
        - name: tasker-app
          image: tasker:1.0.0
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
